# wrig

./: .gitignore  README.md  WINDOWS_HANDOFF.md  pyproject.toml
docs/: flex-tx-meter-bug.md
templates/: default.ini
tests/: test_wrig.py
wrig/: __init__.py  cli.py  config.py  instance.py  launcher.py  picker.py  registry.py
